--- a/README
+++ b/README
@@ -15,6 +15,10 @@ public class FooTest : CollaborationTest<Foo, IBar>
 
 
     A.CallTo(foo => foo.DoX())
+     .Assuming(itsBar => itsBar.Y()).Returns(Some<int>)
+     .ShouldReturn(TheSame<int>);
+
+    A.CallTo(foo => foo.DoX())
      .Assuming(itsBar => itsBar.Y()).Returns(null)
      .ShouldThrow<ZException>();
 
